force-app/main/default/objects/dataGeneralInformation__c/dataGeneralInformation__c.object-meta.xml
<CustomObject>
    <label>General Information</label>
    <nameField>
        <label>General Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>