force-app/main/default/objects/dataGeneralInformation__c/fields/age2__c.field-meta.xml
<CustomField>
    <fullName>age2__c</fullName>
    <label>age2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>