force-app/main/default/objects/dataGeneralInformation__c/fields/aktv__c.field-meta.xml
<CustomField>
    <fullName>aktv__c</fullName>
    <label>aktv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>