force-app/main/default/objects/dataGeneralInformation__c/fields/bbel__c.field-meta.xml
<CustomField>
    <fullName>bbel__c</fullName>
    <label>bbel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>