force-app/main/default/objects/dataGeneralInformation__c/fields/bem__c.field-meta.xml
<CustomField>
    <fullName>bem__c</fullName>
    <label>bem</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>