force-app/main/default/objects/dataGeneralInformation__c/fields/coi__c.field-meta.xml
<CustomField>
    <fullName>coi__c</fullName>
    <label>coi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>