force-app/main/default/objects/dataGeneralInformation__c/fields/extm__c.field-meta.xml
<CustomField>
    <fullName>extm__c</fullName>
    <label>extm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>