force-app/main/default/objects/dataGeneralInformation__c/fields/extr__c.field-meta.xml
<CustomField>
    <fullName>extr__c</fullName>
    <label>extr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>