force-app/main/default/objects/dataGeneralInformation__c/fields/flnr__c.field-meta.xml
<CustomField>
    <fullName>flnr__c</fullName>
    <label>flnr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>