force-app/main/default/objects/dataGeneralInformation__c/fields/grp__c.field-meta.xml
<CustomField>
    <fullName>grp__c</fullName>
    <label>grp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>