force-app/main/default/objects/dataGeneralInformation__c/fields/iat2__c.field-meta.xml
<CustomField>
    <fullName>iat2__c</fullName>
    <label>iat2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>