force-app/main/default/objects/dataGeneralInformation__c/fields/iata__c.field-meta.xml
<CustomField>
    <fullName>iata__c</fullName>
    <label>iata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>