force-app/main/default/objects/dataGeneralInformation__c/fields/idnr__c.field-meta.xml
<CustomField>
    <fullName>idnr__c</fullName>
    <label>idnr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>