force-app/main/default/objects/dataGeneralInformation__c/fields/kto__c.field-meta.xml
<CustomField>
    <fullName>kto__c</fullName>
    <label>kto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>