force-app/main/default/objects/dataGeneralInformation__c/fields/lanb__c.field-meta.xml
<CustomField>
    <fullName>lanb__c</fullName>
    <label>lanb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>