force-app/main/default/objects/dataGeneralInformation__c/fields/land__c.field-meta.xml
<CustomField>
    <fullName>land__c</fullName>
    <label>land</label>
    <length>255</length>
    <type>Text</type>
</CustomField>