force-app/main/default/objects/dataGeneralInformation__c/fields/long__c.field-meta.xml
<CustomField>
    <fullName>long__c</fullName>
    <label>long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>