force-app/main/default/objects/dataGeneralInformation__c/fields/nam1__c.field-meta.xml
<CustomField>
    <fullName>nam1__c</fullName>
    <label>nam1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>