force-app/main/default/objects/dataGeneralInformation__c/fields/nam2__c.field-meta.xml
<CustomField>
    <fullName>nam2__c</fullName>
    <label>nam2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>