force-app/main/default/objects/dataGeneralInformation__c/fields/ordn__c.field-meta.xml
<CustomField>
    <fullName>ordn__c</fullName>
    <label>ordn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>