force-app/main/default/objects/dataGeneralInformation__c/fields/ort__c.field-meta.xml
<CustomField>
    <fullName>ort__c</fullName>
    <label>ort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>