force-app/main/default/objects/dataGeneralInformation__c/fields/pln__c.field-meta.xml
<CustomField>
    <fullName>pln__c</fullName>
    <label>pln</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>