force-app/main/default/objects/dataGeneralInformation__c/fields/plz__c.field-meta.xml
<CustomField>
    <fullName>plz__c</fullName>
    <label>plz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>