force-app/main/default/objects/dataGeneralInformation__c/fields/prl__c.field-meta.xml
<CustomField>
    <fullName>prl__c</fullName>
    <label>prl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>