force-app/main/default/objects/dataGeneralInformation__c/fields/prv__c.field-meta.xml
<CustomField>
    <fullName>prv__c</fullName>
    <label>prv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>