force-app/main/default/objects/dataGeneralInformation__c/fields/rci__c.field-meta.xml
<CustomField>
    <fullName>rci__c</fullName>
    <label>rci</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>