force-app/main/default/objects/dataGeneralInformation__c/fields/rcn__c.field-meta.xml
<CustomField>
    <fullName>rcn__c</fullName>
    <label>rcn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>