force-app/main/default/objects/dataGeneralInformation__c/fields/rda__c.field-meta.xml
<CustomField>
    <fullName>rda__c</fullName>
    <label>rda</label>
    <type>Date</type>
</CustomField>