force-app/main/default/objects/dataGeneralInformation__c/fields/rti__c.field-meta.xml
<CustomField>
    <fullName>rti__c</fullName>
    <label>rti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>