force-app/main/default/objects/dataGeneralInformation__c/fields/secr__c.field-meta.xml
<CustomField>
    <fullName>secr__c</fullName>
    <label>secr</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>