force-app/main/default/objects/dataGeneralInformation__c/fields/spra__c.field-meta.xml
<CustomField>
    <fullName>spra__c</fullName>
    <label>spra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>