force-app/main/default/objects/dataGeneralInformation__c/fields/spty__c.field-meta.xml
<CustomField>
    <fullName>spty__c</fullName>
    <label>spty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>