force-app/main/default/objects/dataGeneralInformation__c/fields/str__c.field-meta.xml
<CustomField>
    <fullName>str__c</fullName>
    <label>str</label>
    <length>255</length>
    <type>Text</type>
</CustomField>