force-app/main/default/objects/dataGeneralInformation__c/fields/thdr__c.field-meta.xml
<CustomField>
    <fullName>thdr__c</fullName>
    <label>thdr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>