force-app/main/default/objects/dataGeneralInformation__c/fields/uci__c.field-meta.xml
<CustomField>
    <fullName>uci__c</fullName>
    <label>uci</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>