force-app/main/default/objects/dataGeneralInformation__c/fields/ucn__c.field-meta.xml
<CustomField>
    <fullName>ucn__c</fullName>
    <label>ucn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>