force-app/main/default/objects/dataGeneralInformation__c/fields/uda__c.field-meta.xml
<CustomField>
    <fullName>uda__c</fullName>
    <label>uda</label>
    <type>Date</type>
</CustomField>