force-app/main/default/objects/dataGeneralInformation__c/fields/uti__c.field-meta.xml
<CustomField>
    <fullName>uti__c</fullName>
    <label>uti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>