force-app/main/default/objects/dataGeneralInformation__c/fields/vot__c.field-meta.xml
<CustomField>
    <fullName>vot__c</fullName>
    <label>vot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>