force-app/main/default/objects/dataGeneralInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>importDate__c</columns>
    <columns>batchFileType__c</columns>
    <columns>mvnr__c</columns>
    <columns>konr__c</columns>
    <columns>stor__c</columns>
    <columns>bumo__c</columns>
    <columns>abrd__c</columns>
    <columns>kto__c</columns>
    <columns>bbel__c</columns>
    <columns>uci__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>batchFileLineId__c</field>
        <operation>equals</operation>
        <value>9390227706-0</value>
    </filters>
    <label>Alle registreringer</label>
</ListView>